[package]
name = "liquidity-sources"
version = "0.1.0"
authors = ["Cowswap Developers <developers@cow.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
contracts = { path = "../contracts" }
ethcontract = { version = "0.17.0", default-features = false }
futures = "0.3"
hex-literal = "0.3"
itertools = "0.10"
lazy_static = "1.4.0"
lru = "0.7"
mockall = "0.11"
num = { version = "0.4", features = ["serde"] }
once_cell = "1.16.0"
primitive-types = "0.10"
prometheus = "0.13"
prometheus-metric-storage = "0.4"
reqwest = { version = "0.11", features = ["json"] }
scopeguard = "1.1.0"
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "1.11" }
clap = { version = "3.1", features = ["derive", "env"] }
thiserror = "1.0"
tokio = { version = "1.15", features = ["macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
warp = { version = "0.3", default-features = false }
web3 = { version = "0.18", default-features = false }

[dev-dependencies]
ethcontract-mock = { version = "0.17.0", default-features = false }
maplit = "1.0"
regex = "1.5.5"
jsonrpc-core = "18.0"